--- a/media/css/main.css
+++ b/media/css/main.css
@@ -96,41 +96,58 @@ a {
 h2 {
   padding: 0;
   margin: 0 0 0.5em 0;
+  clear: both;
+  display: inline;
 }
-/* line 72, ../scss/main.scss */
+/* line 74, ../scss/main.scss */
+h2:before {
+  content: '';
+  display: block;
+  height: 1px;
+  line-height: 0;
+  width: 100%;
+}
+/* line 82, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 77, ../scss/main.scss */
+/* line 87, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
   list-style: none;
-  margin: 0 0 1em 0;
+  margin: 1em 0;
   padding: 0;
+  font-weight: bold;
 }
-/* line 84, ../scss/main.scss */
+/* line 95, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
+  position: relative;
+  left: 18px;
 }
-/* line 88, ../scss/main.scss */
+/* line 100, ../scss/main.scss */
+ul.pageNav.right li {
+  padding: 0 0 0 0.5em;
+}
+/* line 105, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 93, ../scss/main.scss */
+/* line 110, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 97, ../scss/main.scss */
+/* line 114, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
   color: #fff;
 }
-/* line 104, ../scss/main.scss */
+/* line 121, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -140,38 +157,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 110, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 113, ../scss/main.scss */
+/* line 130, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 117, ../scss/main.scss */
+/* line 134, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 122, ../scss/main.scss */
-ul.pageNav.bottom {
-  -webkit-border-radius: 0 0 0.25em 0.25em;
-  -moz-border-radius: 0 0 0.25em 0.25em;
-  -ms-border-radius: 0 0 0.25em 0.25em;
-  -o-border-radius: 0 0 0.25em 0.25em;
-  border-radius: 0 0 0.25em 0.25em;
-  border: 1px solid #3d628c;
-  border-top: none;
-}
-/* line 127, ../scss/main.scss */
-ul.pageNav.bottom li:last-child a {
-  -webkit-border-radius: 0 0 0.125em 0;
-  -moz-border-radius: 0 0 0.125em 0;
-  -ms-border-radius: 0 0 0.125em 0;
-  -o-border-radius: 0 0 0.125em 0;
-  border-radius: 0 0 0.125em 0;
-}
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
@@ -180,7 +179,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
@@ -189,7 +188,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
@@ -198,7 +197,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
@@ -207,7 +206,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
@@ -216,7 +215,7 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
@@ -225,24 +224,24 @@ ul.pageNav.bottom li:last-child a {
   height: 16px;
 }
 
-/* line 146, ../scss/main.scss */
+/* line 153, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
 }
-/* line 151, ../scss/main.scss */
+/* line 158, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 156, ../scss/main.scss */
+/* line 163, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 160, ../scss/main.scss */
+/* line 167, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -254,7 +253,7 @@ ul.pageNav.bottom li:last-child a {
   vertical-align: middle;
 }
 
-/* line 174, ../scss/main.scss */
+/* line 181, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -270,21 +269,21 @@ ul.pageNav.bottom li:last-child a {
   overflow-x: hidden;
   background: #fff;
 }
-/* line 187, ../scss/main.scss */
+/* line 194, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: bottom;
   max-height: 15px;
 }
-/* line 194, ../scss/main.scss */
+/* line 201, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 198, ../scss/main.scss */
+/* line 205, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 202, ../scss/main.scss */
+/* line 209, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -299,7 +298,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 212, ../scss/main.scss */
+/* line 219, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -309,22 +308,22 @@ ul.pageNav.bottom li:last-child a {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 221, ../scss/main.scss */
+/* line 228, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 226, ../scss/main.scss */
+/* line 233, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 230, ../scss/main.scss */
+/* line 237, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 235, ../scss/main.scss */
+/* line 242, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -332,7 +331,7 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 242, ../scss/main.scss */
+/* line 249, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -340,22 +339,22 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 251, ../scss/main.scss */
+/* line 258, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 258, ../scss/main.scss */
+/* line 265, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 262, ../scss/main.scss */
+/* line 269, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 283, ../scss/main.scss */
+/* line 290, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -368,7 +367,7 @@ ul.pageNav.bottom li:last-child a {
   text-align: left;
   background: #222;
 }
-/* line 297, ../scss/main.scss */
+/* line 304, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -377,12 +376,12 @@ ul.pageNav.bottom li:last-child a {
   background: url(../images/noiseblack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 305, ../scss/main.scss */
+/* line 312, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 311, ../scss/main.scss */
+/* line 318, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -390,19 +389,19 @@ ul.pageNav.bottom li:last-child a {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 321, ../scss/main.scss */
+/* line 328, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 330, ../scss/main.scss */
+  /* line 337, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 333, ../scss/main.scss */
+  /* line 340, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -410,13 +409,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-webkit-keyframes spin {
-  /* line 330, ../scss/main.scss */
+  /* line 337, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 333, ../scss/main.scss */
+  /* line 340, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -424,13 +423,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-o-keyframes spin {
-  /* line 330, ../scss/main.scss */
+  /* line 337, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 333, ../scss/main.scss */
+  /* line 340, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -438,13 +437,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-ms-keyframes spin {
-  /* line 330, ../scss/main.scss */
+  /* line 337, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 333, ../scss/main.scss */
+  /* line 340, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -452,18 +451,18 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @keyframes spin {
-  /* line 330, ../scss/main.scss */
+  /* line 337, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 333, ../scss/main.scss */
+  /* line 340, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 338, ../scss/main.scss */
+/* line 345, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -476,7 +475,7 @@ ul.pageNav.bottom li:last-child a {
   z-index: 9998;
 }
 
-/* line 350, ../scss/main.scss */
+/* line 357, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -488,34 +487,34 @@ ul.pageNav.bottom li:last-child a {
   background: #eee;
 }
 
-/* line 361, ../scss/main.scss */
+/* line 368, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 364, ../scss/main.scss */
+/* line 371, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 371, ../scss/main.scss */
+/* line 378, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 379, ../scss/main.scss */
+/* line 386, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 385, ../scss/main.scss */
+/* line 392, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 389, ../scss/main.scss */
+/* line 396, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -526,7 +525,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 399, ../scss/main.scss */
+/* line 406, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(2px);
