--- a/media/css/user.css
+++ b/media/css/user.css
@@ -5,17 +5,18 @@
 @import "compass/typography/vertical_rhythm"; // Helps set up a vertical rhythm.
 @import "zen";              // Add the Zen Grids responsive layout mixins.
 */
-/* line 8, ../scss/user.scss */
+/* line 6, ../scss/user.scss */
 .profile h2 {
   color: #555;
+  float: none;
 }
-/* line 12, ../scss/user.scss */
+/* line 11, ../scss/user.scss */
 .profile .modDropdown {
   right: 30px;
   position: absolute;
 }
 
-/* line 18, ../scss/user.scss */
+/* line 17, ../scss/user.scss */
 .quickstats {
   display: inline-block;
   float: left;
@@ -29,26 +30,26 @@
   border-width: 0px 2px 0px 0px;
   width: 218px;
 }
-/* line 26, ../scss/user.scss */
+/* line 25, ../scss/user.scss */
 .quickstats .membership {
   display: block;
   color: #999;
   font-size: 0.8em;
 }
-/* line 32, ../scss/user.scss */
+/* line 31, ../scss/user.scss */
 .quickstats .avatar {
   width: 188px;
   height: 188px;
   border: 2px solid #d1d1d1;
 }
-/* line 38, ../scss/user.scss */
+/* line 37, ../scss/user.scss */
 .quickstats .steamId {
   display: block;
   text-align: right;
   color: #999;
   font-size: 0.8em;
 }
-/* line 45, ../scss/user.scss */
+/* line 44, ../scss/user.scss */
 .quickstats h3 {
   border-style: solid;
   border-color: #e9e9e9;
@@ -60,7 +61,7 @@
   border-width: 0px 0px 2px 0px;
   text-align: right;
 }
-/* line 50, ../scss/user.scss */
+/* line 49, ../scss/user.scss */
 .quickstats dl {
   display: block;
   width: 188px;
@@ -68,7 +69,7 @@
   margin: 0;
   padding: 0;
 }
-/* line 58, ../scss/user.scss */
+/* line 57, ../scss/user.scss */
 .quickstats dt, .quickstats dd {
   display: inline-block;
   padding: 0.25em 8px;
@@ -78,30 +79,30 @@
   white-space: nowrap;
   overflow: visible;
 }
-/* line 67, ../scss/user.scss */
+/* line 66, ../scss/user.scss */
 .quickstats dt:nth-of-type(even), .quickstats dd:nth-of-type(even) {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
 }
-/* line 72, ../scss/user.scss */
+/* line 71, ../scss/user.scss */
 .quickstats dt {
   letter-spacing: -1px;
 }
-/* line 75, ../scss/user.scss */
+/* line 74, ../scss/user.scss */
 .quickstats dd {
   text-align: right;
 }
-/* line 81, ../scss/user.scss */
+/* line 80, ../scss/user.scss */
 .quickstats dd a:after {
   display: none;
 }
 
-/* line 87, ../scss/user.scss */
+/* line 86, ../scss/user.scss */
 .statsDetailed {
   float: left;
   padding: 0 0 0 30px;
   width: 620px;
 }
-/* line 96, ../scss/user.scss */
+/* line 95, ../scss/user.scss */
 .statsDetailed ul.tabs {
   display: inline-block;
   list-style: none;
@@ -118,37 +119,48 @@
   font-family: 'Arvil Sans', Arial;
   font-size: 1.5em;
   width: 590px;
+  text-align: justify;
+  height: 1.5em;
+  overflow: hidden;
 }
-/* line 106, ../scss/user.scss */
+/* line 110, ../scss/user.scss */
+.statsDetailed ul.tabs:after {
+  content: '';
+  display: inline-block;
+  height: 1px;
+  line-height: 0;
+  width: 99%;
+}
+/* line 118, ../scss/user.scss */
 .statsDetailed ul.tabs li {
   display: inline-block;
 }
-/* line 109, ../scss/user.scss */
+/* line 121, ../scss/user.scss */
 .statsDetailed ul.tabs li a {
   padding: 0 0.25em;
   color: #555;
   border-bottom: 2px solid transparent;
 }
-/* line 115, ../scss/user.scss */
+/* line 127, ../scss/user.scss */
 .statsDetailed ul.tabs li a:hover {
   border-bottom-color: #555;
   text-decoration: none;
 }
-/* line 121, ../scss/user.scss */
+/* line 133, ../scss/user.scss */
 .statsDetailed ul.tabs li.selected a {
   color: #25bfff;
   border-bottom: 2px solid #25bfff;
 }
-/* line 129, ../scss/user.scss */
+/* line 141, ../scss/user.scss */
 .statsDetailed .tabItem {
   display: none;
 }
-/* line 132, ../scss/user.scss */
+/* line 144, ../scss/user.scss */
 .statsDetailed .tabItem.selected {
   display: block;
 }
-/* line 137, ../scss/user.scss */
-.statsDetailed h2 {
+/* line 149, ../scss/user.scss */
+.statsDetailed h3 {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
   color: #fff;
   margin: 1em 0 0 0;
@@ -156,7 +168,7 @@
   font-size: 1em;
   font-weight: bold;
 }
-/* line 146, ../scss/user.scss */
+/* line 158, ../scss/user.scss */
 .statsDetailed dl, .statsDetailed .stats {
   display: block;
   width: 590px;
@@ -172,11 +184,11 @@
   border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
   border-width: 0px 1px 1px 1px;
 }
-/* line 155, ../scss/user.scss */
+/* line 167, ../scss/user.scss */
 .statsDetailed .stats {
   padding: 0.5em;
 }
-/* line 159, ../scss/user.scss */
+/* line 171, ../scss/user.scss */
 .statsDetailed dt, .statsDetailed dd {
   display: inline-block;
   padding: 0.25em 8px;
@@ -186,19 +198,19 @@
   white-space: nowrap;
   overflow: visible;
 }
-/* line 168, ../scss/user.scss */
+/* line 180, ../scss/user.scss */
 .statsDetailed dt:nth-of-type(even), .statsDetailed dd:nth-of-type(even) {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 173, ../scss/user.scss */
+/* line 185, ../scss/user.scss */
 .statsDetailed dt {
   letter-spacing: -1px;
 }
-/* line 176, ../scss/user.scss */
+/* line 188, ../scss/user.scss */
 .statsDetailed dd {
   text-align: right;
 }
-/* line 182, ../scss/user.scss */
+/* line 194, ../scss/user.scss */
 .statsDetailed dd a:after {
   display: none;
 }
