--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -68,16 +68,8 @@ a {
 h2 {
   padding: 0;
   margin: 0 0 0.5em 0;
+  float: left;
   clear: both;
-  display: inline;
-
-  &:before {
-    content: '';
-    display: block;
-    height: 1px;
-    line-height: 0;
-    width: 100%;
-  }
 
   a {
     color: #767676;
@@ -154,6 +146,7 @@ $tags: (vip, mod, admin, dev, super, owner);
   margin: 0;
   padding: 0;
   display: inline-block;
+  float: left;
 
   li {
     display: inline-block;
