fixed image overflow breaking

--- a/media/css/threads.css
+++ b/media/css/threads.css
@@ -30,7 +30,7 @@ h2.threadTitle.closed:after {
   content: ' (CLOSED)';
 }
 
-/* line 30, ../scss/threads.scss */
+/* line 28, ../scss/threads.scss */
 .posts {
   margin: 0 -30px;
   background: url(../images/noiseOffWhite.png) repeat left center #f9f9f9;
@@ -43,7 +43,7 @@ h2.threadTitle.closed:after {
   border-width: 0px 0px 2px 0px;
 }
 
-/* line 36, ../scss/threads.scss */
+/* line 34, ../scss/threads.scss */
 .post {
   border-style: solid;
   border-color: #e0e0e0;
@@ -56,7 +56,7 @@ h2.threadTitle.closed:after {
   padding: 36px 0 16px 0;
   position: relative;
 }
-/* line 39, ../scss/threads.scss */
+/* line 37, ../scss/threads.scss */
 .post.seen {
   border-style: solid;
   border-color: #e0e0e0;
@@ -67,7 +67,7 @@ h2.threadTitle.closed:after {
   border-image: url(../images/noiseGreyDark.png) 0 0 0 5 repeat repeat;
   border-width: 0px 0px 0px 5px;
 }
-/* line 45, ../scss/threads.scss */
+/* line 43, ../scss/threads.scss */
 .post.myPost {
   border-style: solid;
   border-color: #25bfff;
@@ -78,7 +78,7 @@ h2.threadTitle.closed:after {
   border-image: url(../images/noiseblue.png) 0 0 0 5 repeat repeat;
   border-width: 0px 0px 0px 5px;
 }
-/* line 73, ../scss/threads.scss */
+/* line 71, ../scss/threads.scss */
 .post:before {
   content: '';
   display: block;
@@ -89,7 +89,7 @@ h2.threadTitle.closed:after {
   top: 0;
 }
 
-/* line 84, ../scss/threads.scss */
+/* line 82, ../scss/threads.scss */
 .editLink, .quoteLink, .modDropdown {
   width: 32px;
   height: 32px;
@@ -97,7 +97,7 @@ h2.threadTitle.closed:after {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 91, ../scss/threads.scss */
+/* line 89, ../scss/threads.scss */
 .postOptions {
   position: absolute;
   top: 36px;
@@ -105,66 +105,66 @@ h2.threadTitle.closed:after {
   line-height: 1;
   width: 32px;
 }
-/* line 116, ../scss/threads.scss */
+/* line 114, ../scss/threads.scss */
 .postOptions > a, .postOptions > .modDropdown {
   margin: 0 0 8px 0;
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 120, ../scss/threads.scss */
+/* line 118, ../scss/threads.scss */
 .postOptions > a:hover, .postOptions > .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 124, ../scss/threads.scss */
+/* line 122, ../scss/threads.scss */
 .postOptions > a:active, .postOptions > .modDropdown:active {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
 }
 
-/* line 131, ../scss/threads.scss */
+/* line 129, ../scss/threads.scss */
 .postOptions {
   opacity: 0.25;
 }
 
-/* line 135, ../scss/threads.scss */
+/* line 133, ../scss/threads.scss */
 .post:hover .postOptions, .postOptions.active {
   opacity: 1;
 }
 
-/* line 139, ../scss/threads.scss */
+/* line 137, ../scss/threads.scss */
 .userInfo {
   width: 192px;
   display: inline-block;
   padding: 0 32px;
   text-align: right;
 }
-/* line 160, ../scss/threads.scss */
+/* line 158, ../scss/threads.scss */
 .userInfo .avatar {
   width: 128px;
   height: 128px;
   border: 2px solid #d1d1d1;
   display: inline-block;
 }
-/* line 167, ../scss/threads.scss */
+/* line 165, ../scss/threads.scss */
 .userInfo a.userLink {
   color: #404346;
   font-weight: bold;
   display: block;
 }
-/* line 173, ../scss/threads.scss */
+/* line 171, ../scss/threads.scss */
 .userInfo .postCount {
   display: block;
 }
-/* line 177, ../scss/threads.scss */
+/* line 175, ../scss/threads.scss */
 .userInfo .rankTag {
   display: block;
 }
-/* line 181, ../scss/threads.scss */
+/* line 179, ../scss/threads.scss */
 .userInfo .ip, .userInfo .steamId {
   display: block;
   color: #afafaf;
   font-size: 0.75em;
 }
 
-/* line 188, ../scss/threads.scss */
+/* line 186, ../scss/threads.scss */
 .postContent {
   display: inline-block;
   width: 645px;
@@ -175,7 +175,11 @@ h2.threadTitle.closed:after {
   font-family: Helvetica;
   color: #333;
 }
-/* line 200, ../scss/threads.scss */
+/* line 198, ../scss/threads.scss */
+.postContent.expanded {
+  overflow-x: initial;
+}
+/* line 202, ../scss/threads.scss */
 .postContent blockquote {
   padding: 7px 23px;
   border: 1px solid #ddd;
@@ -184,31 +188,31 @@ h2.threadTitle.closed:after {
   margin: 0;
   position: relative;
 }
-/* line 209, ../scss/threads.scss */
+/* line 211, ../scss/threads.scss */
 .postContent blockquote::before {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAKBAMAAAByAqLJAAAALVBMVEWvr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr69hrK0dAAAADnRSTlMARLuZEcwid1Xdqogz7if2De8AAABGSURBVHhebcWxCYAwEEDRT4RD4g7BEbKDfUiVccQhUjuSuMIV4cDiZtABrB5smbkhZ2c3poH4QVGWB66baJAqQT98Da6/vNnzF8PiKPQPAAAAAElFTkSuQmCC");
   left: 7px;
   top: 22px;
   position: absolute;
 }
-/* line 216, ../scss/threads.scss */
+/* line 218, ../scss/threads.scss */
 .postContent blockquote:after {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAKBAMAAAByAqLJAAAALVBMVEWvr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr6+vr69hrK0dAAAADnRSTlMAdzPuiKrMZrtVEd0iRAGl5MMAAABHSURBVHhebcVBEYAgEEDR74yLF2eHBERgSEAEMxDBDFSxgFGIgDe9bAYI4Omh1hd7/kE76yQmZBIK18eeT46b+CLWcJ6tMgAEjxkCJlUqgwAAAABJRU5ErkJggg==");
   bottom: 10px;
   right: 6px;
   position: absolute;
 }
-/* line 223, ../scss/threads.scss */
+/* line 225, ../scss/threads.scss */
 .postContent blockquote a.postLink {
   font-size: 1em;
   margin: 0 0 10px -16px;
   display: inline-block;
 }
-/* line 230, ../scss/threads.scss */
+/* line 232, ../scss/threads.scss */
 .postContent img {
   max-width: 100%;
 }
-/* line 234, ../scss/threads.scss */
+/* line 236, ../scss/threads.scss */
 .postContent .editInfo {
   position: absolute;
   bottom: 0px;
@@ -217,7 +221,7 @@ h2.threadTitle.closed:after {
   font-style: italic;
   color: #999;
 }
-/* line 243, ../scss/threads.scss */
+/* line 245, ../scss/threads.scss */
 .postContent .postTime {
   font-size: 0.75em;
   color: #676565;
